buttons shape done

--- a/src/content/index.html
+++ b/src/content/index.html
@@ -28,9 +28,13 @@
 
 <body>
     <main class="main">
-        <h1>
+        <h1 class="heading">
             The essential pyramid of learning for the survivor.
         </h1>
+
+        <button class="button button-kit button-kit--js">Kit</button>
+        <button class="button button-knowledge button-knowledge--js">Knowledge</button>
+        <button class="button button-WillToLive button-WillToLive--js">Will to live</button>
 
     </main>
 
